--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     /*Kolory*/
     --color-bg: #323131;
     --color-text: orange;
-    --color-primary: #2563eb;
+    --color-primary: #ffffff;
     --color-primary-hover: #be3803;
     /*Topografia*/
     --font-size-base: 1rem;
@@ -60,7 +60,10 @@ body {
     width: 100%;
     max-width: 320px;
     height: 80px;
-    border: 1px solid black;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 20px;
 }
 
 .social-media {
@@ -68,32 +71,28 @@ body {
     width: 100%;
     max-width: 640px;
     height: 80px;
-    border: 1px solid black;
-    display: flex;
+    display: none;
     justify-content: flex-end;
     align-items: center;
     gap: 10px;
 }
 
 .menu {
-    background-color: black;
+    display: flex;
+    margin: 0 auto;
+    background-color: rgb(0, 0, 0);
     width: 100%;
-    max-width: 320px;
     height: 80px;
-    border: 1px solid black;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 10px;
     padding-left: 20px;
-
-}
-
-.menu {
-    display: flex;
     position: relative;
 
 }
+
+
 
 .menu-text {
     color: white;
@@ -106,13 +105,13 @@ body {
 .hamburger-menu-list {
     display: none;
     list-style-type: none;
-    margin: 0;
 
 }
+
 .hamburger-menu-index {
-    background-color: black;
     height: 40px;
     width: 320px;
+
 
 }
 
@@ -120,7 +119,7 @@ body {
     display: block;
     list-style-type: none;
     text-decoration: none;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.57);
     color: white;
     height: 40px;
     line-height: 40px;
@@ -130,7 +129,16 @@ body {
 .menu:hover>.hamburger-menu-list {
     display: block;
     position: absolute;
-    bottom: -205%;
-    left: -1px;
+    bottom: -220%;
+    left: -0.5px;
     padding-left: 0;
+}
+
+@media (min-width: 768px) {
+.social-media {
+    display: flex;
+}
+.menu {
+    max-width: 320px;
+}
 }
